@@ -1,3 +1,6 @@
+# FreeFileSync stuff
+sync.ffs_db
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
