@@ -1,0 +1,390 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "Robert J. Moerland and Jacob P. Hoogenboom. Subnanometer-accuracy optical distance ruler based on fluorescence quenching by transparent conductors, <a href=\"http://dx.doi.org/10.1364/OPTICA.3.000112\"><i>Optica</i> <b>3</b>, 112-117 (2016)</a> - see <i>Supplementary materials</i>"
+COMMENTS: "Optical constants of thin film In<sub>2</sub>O<sub>3</sub>-SnO<sub>2</sub> (ITO, Indium tin oxide), thickness d = 17 nm, purchased from Optics Balzers, ITO on D263M glass. Surface roughness (1 sigma) = 0.4 nm. Variable angle spectroscopic ellipsometry data + normal-incidence transmittance data fitted over the 400 to 900 nm range.<br>Numerical data provided by Robert Moerland."
+DATA:
+  - type: tabulated nk
+    data: |
+        0.401047791 2.063480 0.012450
+        0.402637024 2.060990 0.011971
+        0.404226227 2.058550 0.011515
+        0.405815430 2.056157 0.011082
+        0.407404633 2.053809 0.010669
+        0.408993835 2.051504 0.010277
+        0.410583008 2.049240 0.009903
+        0.412172180 2.047016 0.009547
+        0.413761383 2.044830 0.009208
+        0.415350525 2.042680 0.008885
+        0.416939636 2.040565 0.008577
+        0.418528809 2.038484 0.008284
+        0.420117920 2.036436 0.008004
+        0.421707092 2.034420 0.007737
+        0.423296143 2.032434 0.007482
+        0.424885254 2.030478 0.007239
+        0.426474365 2.028551 0.007007
+        0.428063416 2.026651 0.006786
+        0.429652496 2.024778 0.006574
+        0.431241516 2.022931 0.006372
+        0.432830566 2.021110 0.006179
+        0.434419586 2.019313 0.005995
+        0.436008545 2.017540 0.005819
+        0.437597565 2.015789 0.005651
+        0.439186523 2.014062 0.005490
+        0.440775482 2.012356 0.005336
+        0.442364410 2.010671 0.005188
+        0.443953308 2.009007 0.005048
+        0.445542236 2.007362 0.004913
+        0.447131104 2.005738 0.004784
+        0.448719971 2.004132 0.004661
+        0.450308777 2.002544 0.004543
+        0.451897614 2.000974 0.004430
+        0.453486420 1.999421 0.004322
+        0.455075195 1.997886 0.004218
+        0.456663971 1.996366 0.004119
+        0.458252686 1.994863 0.004024
+        0.459841400 1.993375 0.003934
+        0.461430084 1.991902 0.003847
+        0.463018738 1.990445 0.003764
+        0.464607361 1.989001 0.003684
+        0.466195984 1.987571 0.003608
+        0.467784576 1.986155 0.003535
+        0.469373138 1.984752 0.003465
+        0.470961670 1.983362 0.003398
+        0.472550201 1.981985 0.003334
+        0.474138672 1.980620 0.003272
+        0.475727112 1.979266 0.003214
+        0.477315521 1.977924 0.003157
+        0.478903961 1.976594 0.003104
+        0.480492279 1.975275 0.003052
+        0.482080627 1.973966 0.003003
+        0.483668945 1.972668 0.002956
+        0.485257233 1.971380 0.002911
+        0.486845459 1.970102 0.002868
+        0.488433655 1.968834 0.002827
+        0.490021820 1.967575 0.002787
+        0.491609955 1.966325 0.002750
+        0.493198090 1.965084 0.002714
+        0.494786194 1.963853 0.002679
+        0.496374207 1.962629 0.002647
+        0.497962219 1.961414 0.002616
+        0.499550201 1.960207 0.002586
+        0.501138123 1.959008 0.002557
+        0.502726013 1.957817 0.002531
+        0.504313873 1.956633 0.002505
+        0.505901703 1.955457 0.002480
+        0.507489502 1.954288 0.002457
+        0.509077240 1.953126 0.002435
+        0.510664948 1.951971 0.002414
+        0.512252563 1.950822 0.002394
+        0.513840210 1.949680 0.002376
+        0.515427856 1.948544 0.002358
+        0.517015381 1.947415 0.002341
+        0.518602905 1.946291 0.002325
+        0.520190308 1.945173 0.002310
+        0.521777710 1.944062 0.002296
+        0.523365112 1.942955 0.002283
+        0.524952454 1.941854 0.002271
+        0.526539734 1.940759 0.002259
+        0.528127014 1.939669 0.002249
+        0.529714172 1.938583 0.002239
+        0.531301331 1.937503 0.002229
+        0.532888428 1.936428 0.002221
+        0.534475464 1.935357 0.002213
+        0.536062500 1.934291 0.002206
+        0.537649475 1.933229 0.002199
+        0.539236389 1.932172 0.002193
+        0.540823242 1.931119 0.002188
+        0.542410034 1.930070 0.002184
+        0.543996826 1.929026 0.002179
+        0.545583557 1.927985 0.002176
+        0.547170227 1.926948 0.002173
+        0.548756775 1.925915 0.002170
+        0.550343384 1.924885 0.002168
+        0.551929871 1.923859 0.002167
+        0.553516296 1.922837 0.002166
+        0.555102722 1.921818 0.002166
+        0.556689087 1.920802 0.002166
+        0.558275391 1.919790 0.002166
+        0.559861633 1.918780 0.002167
+        0.561447815 1.917774 0.002168
+        0.563033936 1.916771 0.002170
+        0.564619995 1.915770 0.002172
+        0.566205994 1.914773 0.002175
+        0.567791931 1.913778 0.002178
+        0.569377808 1.912786 0.002181
+        0.570963684 1.911796 0.002185
+        0.572549438 1.910809 0.002189
+        0.574135193 1.909825 0.002193
+        0.575720825 1.908843 0.002198
+        0.577306458 1.907863 0.002203
+        0.578891968 1.906885 0.002208
+        0.580477417 1.905910 0.002214
+        0.582062866 1.904937 0.002220
+        0.583648254 1.903966 0.002227
+        0.585233521 1.902997 0.002233
+        0.586818726 1.902029 0.002240
+        0.588403931 1.901064 0.002248
+        0.589989014 1.900101 0.002255
+        0.591574036 1.899139 0.002263
+        0.593158997 1.898180 0.002271
+        0.594743896 1.897221 0.002280
+        0.596328735 1.896265 0.002288
+        0.597913452 1.895310 0.002297
+        0.599498169 1.894357 0.002306
+        0.601082825 1.893405 0.002316
+        0.602667358 1.892454 0.002326
+        0.604251831 1.891505 0.002336
+        0.605836304 1.890557 0.002346
+        0.607420654 1.889611 0.002356
+        0.609004944 1.888666 0.002367
+        0.610589111 1.887722 0.002378
+        0.612173218 1.886779 0.002389
+        0.613757324 1.885837 0.002400
+        0.615341309 1.884897 0.002412
+        0.616925232 1.883957 0.002424
+        0.618509094 1.883018 0.002436
+        0.620092834 1.882081 0.002448
+        0.621676575 1.881144 0.002461
+        0.623260132 1.880208 0.002473
+        0.624843689 1.879273 0.002486
+        0.626427124 1.878339 0.002499
+        0.628010559 1.877406 0.002512
+        0.629593872 1.876473 0.002526
+        0.631177124 1.875541 0.002540
+        0.632760254 1.874609 0.002553
+        0.634343384 1.873679 0.002568
+        0.635926331 1.872749 0.002582
+        0.637509277 1.871819 0.002596
+        0.639092102 1.870890 0.002611
+        0.640674866 1.869961 0.002626
+        0.642257507 1.869033 0.002641
+        0.643840149 1.868105 0.002656
+        0.645422668 1.867178 0.002671
+        0.647005066 1.866251 0.002687
+        0.648587402 1.865324 0.002702
+        0.650169678 1.864398 0.002718
+        0.651751831 1.863472 0.002734
+        0.653333923 1.862546 0.002751
+        0.654915894 1.861621 0.002767
+        0.656497864 1.860695 0.002784
+        0.658079712 1.859770 0.002800
+        0.659661438 1.858845 0.002817
+        0.661243042 1.857920 0.002834
+        0.662824646 1.856995 0.002852
+        0.664406128 1.856071 0.002869
+        0.665987549 1.855146 0.002887
+        0.667568848 1.854221 0.002904
+        0.669150024 1.853296 0.002922
+        0.670731140 1.852372 0.002940
+        0.672312195 1.851447 0.002959
+        0.673893127 1.850522 0.002977
+        0.675473999 1.849597 0.002996
+        0.677054749 1.848671 0.003014
+        0.678635376 1.847746 0.003033
+        0.680215942 1.846821 0.003052
+        0.681796448 1.845895 0.003071
+        0.683376831 1.844969 0.003091
+        0.684957092 1.844043 0.003110
+        0.686537231 1.843116 0.003130
+        0.688117371 1.842190 0.003150
+        0.689697388 1.841263 0.003169
+        0.691277222 1.840335 0.003190
+        0.692857056 1.839408 0.003210
+        0.694436768 1.838480 0.003230
+        0.696016357 1.837551 0.003251
+        0.697595825 1.836622 0.003272
+        0.699175232 1.835693 0.003292
+        0.700754578 1.834763 0.003313
+        0.702333801 1.833833 0.003335
+        0.703912903 1.832903 0.003356
+        0.705491821 1.831972 0.003377
+        0.707070740 1.831040 0.003399
+        0.708649536 1.830108 0.003421
+        0.710228210 1.829175 0.003443
+        0.711806824 1.828242 0.003465
+        0.713385315 1.827308 0.003487
+        0.714963684 1.826374 0.003509
+        0.716541931 1.825439 0.003532
+        0.718120117 1.824503 0.003554
+        0.719698181 1.823567 0.003577
+        0.721276123 1.822630 0.003600
+        0.722853943 1.821692 0.003623
+        0.724431702 1.820754 0.003647
+        0.726009338 1.819815 0.003670
+        0.727586853 1.818875 0.003693
+        0.729164246 1.817935 0.003717
+        0.730741577 1.816993 0.003741
+        0.732318726 1.816051 0.003765
+        0.733895874 1.815108 0.003789
+        0.735472778 1.814165 0.003813
+        0.737049683 1.813221 0.003838
+        0.738626404 1.812275 0.003862
+        0.740203003 1.811329 0.003887
+        0.741779541 1.810382 0.003912
+        0.743355957 1.809435 0.003937
+        0.744932251 1.808486 0.003962
+        0.746508423 1.807536 0.003988
+        0.748084412 1.806586 0.004013
+        0.749660400 1.805634 0.004039
+        0.751236206 1.804682 0.004064
+        0.752811890 1.803729 0.004090
+        0.754387512 1.802775 0.004116
+        0.755963013 1.801820 0.004143
+        0.757538330 1.800864 0.004169
+        0.759113586 1.799906 0.004195
+        0.760688660 1.798948 0.004222
+        0.762263672 1.797989 0.004249
+        0.763838501 1.797029 0.004276
+        0.765413269 1.796068 0.004303
+        0.766987915 1.795106 0.004330
+        0.768562378 1.794142 0.004358
+        0.770136841 1.793178 0.004385
+        0.771711060 1.792212 0.004413
+        0.773285217 1.791246 0.004441
+        0.774859253 1.790278 0.004469
+        0.776433105 1.789309 0.004497
+        0.778006836 1.788339 0.004525
+        0.779580444 1.787368 0.004554
+        0.781153992 1.786396 0.004582
+        0.782727417 1.785423 0.004611
+        0.784300659 1.784448 0.004640
+        0.785873779 1.783472 0.004669
+        0.787446777 1.782495 0.004698
+        0.789019653 1.781517 0.004728
+        0.790592407 1.780538 0.004757
+        0.792164978 1.779557 0.004787
+        0.793737427 1.778576 0.004817
+        0.795309814 1.777593 0.004847
+        0.796882019 1.776608 0.004877
+        0.798454163 1.775623 0.004907
+        0.800026062 1.774636 0.004938
+        0.801597900 1.773648 0.004968
+        0.803169556 1.772659 0.004999
+        0.804741150 1.771668 0.005030
+        0.806312561 1.770676 0.005061
+        0.807883850 1.769683 0.005092
+        0.809454956 1.768688 0.005124
+        0.811026001 1.767692 0.005155
+        0.812596863 1.766695 0.005187
+        0.814167603 1.765696 0.005219
+        0.815738220 1.764696 0.005251
+        0.817308716 1.763695 0.005283
+        0.818879028 1.762692 0.005316
+        0.820449219 1.761688 0.005348
+        0.822019226 1.760682 0.005381
+        0.823589172 1.759675 0.005414
+        0.825158997 1.758667 0.005447
+        0.826728516 1.757657 0.005480
+        0.828298035 1.756645 0.005513
+        0.829867371 1.755633 0.005547
+        0.831436646 1.754619 0.005580
+        0.833005676 1.753603 0.005614
+        0.834574524 1.752586 0.005648
+        0.836143372 1.751567 0.005682
+        0.837711914 1.750547 0.005717
+        0.839280457 1.749526 0.005751
+        0.840848755 1.748503 0.005786
+        0.842416992 1.747478 0.005821
+        0.843984985 1.746452 0.005856
+        0.845552917 1.745425 0.005891
+        0.847120605 1.744396 0.005926
+        0.848688171 1.743365 0.005962
+        0.850255676 1.742333 0.005997
+        0.851822937 1.741299 0.006033
+        0.853390137 1.740264 0.006069
+        0.854957153 1.739227 0.006105
+        0.856524048 1.738189 0.006142
+        0.858090698 1.737149 0.006178
+        0.859657227 1.736107 0.006215
+        0.861223633 1.735064 0.006252
+        0.862789856 1.734019 0.006289
+        0.864355957 1.732973 0.006326
+        0.865921875 1.731925 0.006363
+        0.867487671 1.730875 0.006401
+        0.869053345 1.729824 0.006439
+        0.870618774 1.728771 0.006477
+        0.872184082 1.727717 0.006515
+        0.873749207 1.726660 0.006553
+        0.875314270 1.725603 0.006591
+        0.876879089 1.724543 0.006630
+        0.878443726 1.723482 0.006669
+        0.880008301 1.722419 0.006708
+        0.881572632 1.721354 0.006747
+        0.883136841 1.720288 0.006786
+        0.884700867 1.719220 0.006826
+        0.886264771 1.718150 0.006865
+        0.887828491 1.717079 0.006905
+        0.889392090 1.716006 0.006945
+        0.890955444 1.714931 0.006986
+        0.892518738 1.713854 0.007026
+        0.894081848 1.712776 0.007067
+        0.895644714 1.711696 0.007107
+        0.897207520 1.710614 0.007148
+        0.898770020 1.709531 0.007189
+        0.900332520 1.708445 0.007231
+        0.901894714 1.707358 0.007272
+        0.903456848 1.706269 0.007314
+        0.905018738 1.705178 0.007356
+        0.906580444 1.704086 0.007398
+        0.908142090 1.702992 0.007440
+        0.909703491 1.701895 0.007483
+        0.911264771 1.700798 0.007526
+        0.912825867 1.699698 0.007568
+        0.914386841 1.698596 0.007611
+        0.915947571 1.697493 0.007655
+        0.917508118 1.696387 0.007698
+        0.919068481 1.695280 0.007742
+        0.920628723 1.694171 0.007786
+        0.922188782 1.693061 0.007830
+        0.923748657 1.691948 0.007874
+        0.925308411 1.690833 0.007918
+        0.926867859 1.689717 0.007963
+        0.928427246 1.688599 0.008008
+        0.929986450 1.687478 0.008053
+        0.931545532 1.686356 0.008098
+        0.933104309 1.685232 0.008143
+        0.934662964 1.684106 0.008189
+        0.936221497 1.682978 0.008235
+        0.937779785 1.681849 0.008281
+        0.939337891 1.680717 0.008327
+        0.940895874 1.679583 0.008373
+        0.942453613 1.678448 0.008420
+        0.944011230 1.677310 0.008467
+        0.945568665 1.676170 0.008514
+        0.947125854 1.675029 0.008561
+        0.948682922 1.673886 0.008609
+        0.950239868 1.672740 0.008656
+        0.951796509 1.671593 0.008704
+        0.953353027 1.670444 0.008752
+        0.954909363 1.669292 0.008801
+        0.956465515 1.668139 0.008849
+        0.958021484 1.666983 0.008898
+        0.959577271 1.665826 0.008947
+        0.961132813 1.664667 0.008996
+        0.962688171 1.663505 0.009045
+        0.964243469 1.662342 0.009095
+        0.965798462 1.661177 0.009145
+        0.967353333 1.660009 0.009195
+        0.968908020 1.658840 0.009245
+        0.970462402 1.657668 0.009295
+        0.972016724 1.656494 0.009346
+        0.973570801 1.655319 0.009397
+        0.975124695 1.654141 0.009448
+        0.976678406 1.652961 0.009499
+        0.978231934 1.651779 0.009551
+        0.979785278 1.650595 0.009602
+        0.981338501 1.649409 0.009654
+        0.982891418 1.648221 0.009707
+        0.984444153 1.647031 0.009759
+        0.985996704 1.645838 0.009812
+        0.987549011 1.644644 0.009865
+        0.989101257 1.643447 0.009918
+        0.990653198 1.642248 0.009971
+        0.992204956 1.641047 0.010025
+        0.993756653 1.639844 0.010078
+        0.995307983 1.638639 0.010132
+        0.996859192 1.637432 0.010187
+        0.998410156 1.636222 0.010241
+        0.999961060 1.635010 0.010296 
